--- a/240925.ipynb
+++ b/240925.ipynb
@@ -14,7 +14,21 @@
    "id": "30a00407-14a2-446d-8be9-2b888f05b8d8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib as mpl\n",
+    "import seaborn as sb\n",
+    "import scipy as scp\n",
+    "import sklearn\n",
+    "\n",
+    "print(np.__version__)\n",
+    "print(pd.__version__)\n",
+    "print(mpl.__version__)\n",
+    "print(sb.__version__)\n",
+    "print(n.__version__)\n",
+    "print(np.__version__)"
+   ]
   }
  ],
  "metadata": {
