--- a/2024.09.25/alphaco_문제.ipynb
+++ b/2024.09.25/alphaco_문제.ipynb
@@ -11,25 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "bd1eb70d-e564-4f82-8619-5eca21cc13f0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
     }
    ],
    "source": [
     "a = int(10)\n",
     "b = float(5.5)\n",
-    "type(a + b)"
+    "print(type(a + b))"
    ]
   },
   {
@@ -74,26 +71,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "3b8e141e-359f-4061-914e-414f41d56a27",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
     }
    ],
    "source": [
     "a = [1, 2, 3]\n",
     "b = (4, 5, 6)\n",
     "# 더하기 불가능, 튜플을 리스트로 바꾸어 주어야 함 \n",
-    "a + list(b)"
+    "result = a + list(b)\n",
+    "print(result)"
    ]
   },
   {
@@ -139,24 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "e4064dd3-2821-4325-9752-c1ed380e5f5d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n"
+     ]
     }
    ],
    "source": [
     "a = 3\n",
-    "float(a)"
+    "print(float(a))"
    ]
   },
   {
@@ -170,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "e01830dd-3b61-4929-b82c-853a088e751d",
    "metadata": {},
    "outputs": [
@@ -180,14 +172,20 @@
      "text": [
       "Hello\n",
       "Hello\n",
-      "Hello\n"
+      "Hello\n",
+      "HelloHelloHello\n",
+      "<class 'str'>\n"
      ]
     }
    ],
    "source": [
     "s = \"Hello\"\n",
     "for i in range(3):\n",
-    "    print(s)"
+    "    print(s)\n",
+    "#정답\n",
+    "result = s * 3 \n",
+    "print(result)\n",
+    "print(type(result))"
    ]
   },
   {
@@ -201,24 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "a1d1f1bf-c9c1-47f5-8643-9ed3cda9894b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'73'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n"
+     ]
     }
    ],
    "source": [
     "x = 7 \n",
-    "str(x) + \"3\""
+    "a = str(x) + \"3\"\n",
+    "print(a)"
    ]
   },
   {
@@ -272,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "106f5152-0388-42a2-9152-2c7e9d8990ef",
    "metadata": {},
    "outputs": [
@@ -280,24 +276,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.0\n"
+      "50.0\n",
+      "<class 'float'>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "a = 25\n",
     "print(a / 0.5)\n",
-    "type(a / 0.5)"
+    "print(type(a / 0.5))"
    ]
   },
   {
@@ -311,24 +298,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "282c05f0-15b9-4345-832b-86ad77d2ba45",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "12355"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12355\n"
+     ]
     }
    ],
    "source": [
     "text = '12345'\n",
-    "int(text) + 10"
+    "print(int(text) + 10)"
    ]
   },
   {
@@ -342,24 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "bd8bf57c-41cd-4902-a359-6baf60c58bee",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
     }
    ],
    "source": [
     "list = [10, 20, 30, 40, 50]\n",
-    "max(list)"
+    "print(max(list))\n",
+    "\n",
+    "#max_value = max(list)\n",
+    "#print(max_value)"
    ]
   },
   {
@@ -373,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "bf3b13f5-28dc-4c57-8591-5e0ca1bd0664",
    "metadata": {},
    "outputs": [
@@ -383,14 +367,17 @@
        "15"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list = [1, 2, 3, 4, 5]\n",
-    "sum(list)"
+    "sum(list)\n",
+    "\n",
+    "#sum_value = sum(list)\n",
+    "#print(sum_value)"
    ]
   },
   {
@@ -404,24 +391,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "4cdd6f91-ae55-4203-b185-a4a41f4c45ca",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
     }
    ],
    "source": [
     "tuple = (5, 10, 15, 20)\n",
-    "tuple[1]"
+    "print(tuple[1])\n",
+    "\n",
+    "#second_element = tuple[1]\n",
+    "#print(second_element)"
    ]
   },
   {
@@ -435,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "edc79a41-0f49-4c58-a24d-d30ec46b8de3",
    "metadata": {},
    "outputs": [
@@ -443,26 +430,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 2, 3, 4, 5, 6)\n"
+      "(1, 2, 3, 4, 5, 6)\n",
+      "<class 'tuple'>\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tuple"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "tu1 = (1, 2, 3)\n",
     "tu2 = (4, 5, 6)\n",
-    "\n",
-    "print(tu1 + tu2)\n",
-    "type(tu1 + tu2)"
+    "a = tu1 + tu2\n",
+    "print(a)\n",
+    "print(type(a))"
    ]
   },
   {
@@ -548,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "id": "e87349a6-95e0-4efc-b36e-7a58ec94c77e",
    "metadata": {},
    "outputs": [
@@ -556,6 +534,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      " \n",
       "1\n",
       "2\n",
       "3\n",
@@ -568,8 +552,15 @@
     "i = 0\n",
     "\n",
     "while (i < 5):\n",
-    "    i = i + 1\n",
-    "    print(i)"
+    "    i = i + 1 \n",
+    "    print(i)\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "i = 1 \n",
+    "while i <= 5:\n",
+    "    print(i)\n",
+    "    i += 1"
    ]
   },
   {
@@ -583,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 25,
    "id": "de9a8140-3d3d-4dde-a4be-7accc05ae106",
    "metadata": {},
    "outputs": [
@@ -591,6 +582,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      " \n",
       "10\n",
       "9\n",
       "8\n",
@@ -608,7 +610,14 @@
     "i = 11\n",
     "while (i > 1):\n",
     "    i = i - 1\n",
-    "    print(i)"
+    "    print(i)\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "i=10\n",
+    "while i >=1:\n",
+    "    print(i)\n",
+    "    i -= 1"
    ]
   },
   {
@@ -622,22 +631,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "id": "c0632916-4e2a-4dc1-bdb2-61ec871664a4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4, 8, 12, 16, 20]\n"
+      "[4, 8, 12, 16, 20]\n",
+      " \n",
+      "4\n",
+      "8\n",
+      "12\n",
+      "16\n",
+      "20\n"
      ]
     }
    ],
    "source": [
     "num = [2, 4, 6, 8, 10]\n",
     "result = [x * 2 for x in num]\n",
-    "print(result)"
+    "print(result)\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "for n in num:\n",
+    "    print(n * 2)"
    ]
   },
   {
@@ -651,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "id": "e391faca-c722-4ba1-a9d6-e306a8532e3d",
    "metadata": {},
    "outputs": [
@@ -659,14 +681,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['P', 'y', 't', 'h', 'o', 'n']\n"
+      "['P', 'y', 't', 'h', 'o', 'n']\n",
+      " \n",
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n"
      ]
     }
    ],
    "source": [
     "a = \"Python\"\n",
     "result = [x for x in a]\n",
-    "print(result)"
+    "print(result)\n",
+    "\n",
+    "print(\" \")\n",
+    "\n",
+    "for char in a:\n",
+    "    print(char)"
    ]
   },
   {
